--- a/.github/workflows/generator-macos.yml
+++ b/.github/workflows/generator-macos.yml
@@ -560,16 +560,26 @@ jobs:
 
       - name: Build rustdesk
         run: |
-          if [ "${{ matrix.job.target }}" = "aarch64-apple-darwin" ]; then
           if [ "${{ matrix.job.target }}" = "x86_64-apple-darwin" ]; then
             MIN_MACOS_VERSION="12.3"
             sed -i -e "s/MACOSX_DEPLOYMENT_TARGET\=[0-9]*.[0-9]*/MACOSX_DEPLOYMENT_TARGET=${MIN_MACOS_VERSION}/" build.py
             sed -i -e "s/platform :osx, '.*'/platform :osx, '${MIN_MACOS_VERSION}'/" flutter/macos/Podfile
-            sed -i -e "s/osx_minimum_system_version = \"[0-9]*.[0-9]*\"/osx_minimum_system_version = \"${MIN_MACOS_VERSION}\"/" Cargo.toml
-            sed -i -e "s/MACOSX_DEPLOYMENT_TARGET = [0-9]*.[0-9]*;/MACOSX_DEPLOYMENT_TARGET = ${MIN_MACOS_VERSION};/" flutter/macos/Runner.xcodeproj/project.pbxproj
           fi
+
+          # Build for the specific architecture
+          if [ "${{ matrix.job.target }}" = "x86_64-apple-darwin" ]; then
+            cargo build --features inline --target x86_64-apple-darwin --release
+            cd flutter
+            flutter build macos --release --target-platform macos-x64
+          else
+            cargo build --features inline --target aarch64-apple-darwin --release
+            cd flutter
+            flutter build macos --release --target-platform macos-arm64
+          fi
+
+          # Update app name and run build script
           sed -i -e "s/RustDesk.app/\"${{ inputs.appname }}.app\"/" build.py
-          ./build.py --flutter --hwcodec ${{ matrix.job.extra-build-args }}
+          ./build.py --flutter ${{ matrix.job.extra-build-args }}
 
       - name: Report Status - Post Build
         uses: fjogeleit/http-request-action@v1
