--- a/.github/workflows/generator-macos.yml
+++ b/.github/workflows/generator-macos.yml
@@ -556,6 +556,7 @@ jobs:
       - name: Create custom.txt file
         shell: bash
         run: |
+          mkdir -p ./rustdesk
           echo -n "${{ inputs.custom }}" | cat > ./rustdesk/custom.txt
 
       - name: Build rustdesk
