--- a/.github/workflows/generator-macos-x86.yml
+++ b/.github/workflows/generator-macos-x86.yml
@@ -549,6 +549,7 @@ jobs:
       - name: Create custom.txt file
         shell: bash
         run: |
+          mkdir -p ./rustdesk
           echo -n "${{ inputs.custom }}" | cat > ./rustdesk/custom.txt
 
       - name: Build rustdesk
