--- a/.github/workflows/bridge.yml
+++ b/.github/workflows/bridge.yml
@@ -34,6 +34,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: rustdesk/rustdesk
+          ref: refs/tags/${{ inputs.version }}
           submodules: recursive
         
       - name: Checkout source code
