--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -252,16 +252,19 @@ jobs:
       - name: allow custom.txt
         continue-on-error: true
         run: |
-          $patches = @(
-            @{url = "allowCustom2.diff"; file = "allowCustom.diff"},
-            @{url = "removeSetupServerTip2.diff"; file = "removeSetupServerTip.diff"},
-            @{url = "fixRecentPeers.diff"; file = "fixRecentPeers.diff"}
-          )
-          
-          foreach ($patch in $patches) {
-            Invoke-WebRequest -Uri "https://raw.githubusercontent.com/VenimK/creator/refs/heads/master/.github/patches/$($patch.url)" -OutFile $patch.file
-            git apply $patch.file
-          }
+          $commonRs = Get-Content ./src/common.rs
+          $startLine = $commonRs | Select-String -Pattern "const KEY: &str =" | Select-Object -ExpandProperty LineNumber
+          $endLine = $startLine + 8
+          $commonRs = $commonRs[0..($startLine-2)] + $commonRs[$endLine..$commonRs.Length]
+          $commonRs | Set-Content ./src/common.rs
+
+          $content = Get-Content ./flutter/lib/desktop/pages/connection_page.dart
+          $content = $content -replace 'if \(!isIncomingOnly\) setupServerWidget\(\),', '// if (!isIncomingOnly) setupServerWidget(),'
+          $content | Set-Content ./flutter/lib/desktop/pages/connection_page.dart
+
+          $content = Get-Content ./src/bridge_generated.rs
+          $content = $content -replace 'main_get_recent_peers', 'main_load_recent_peers'
+          $content | Set-Content ./src/bridge_generated.rs
 
       - name: Install LLVM and Clang
         uses: KyleMayes/install-llvm-action@v1
