--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -569,23 +569,34 @@ jobs:
           mkdir -p ./SignOutput
           mv ./target/release/rustdesk-portable-packer.exe "./SignOutput/rustdesk.exe"
 
-      - name: Add MSBuild to PATH
-        uses: microsoft/setup-msbuild@v2    
+      - name: Setup NuGet
+        uses: NuGet/setup-nuget@v1.2.0
 
-      - name: Build msi
-        continue-on-error: true
-        if: env.UPLOAD_ARTIFACT == 'true'
+      - name: Setup MSBuild
+        uses: microsoft/setup-msbuild@v2
+
+      - name: Preprocess MSI files
+        working-directory: res/msi
         run: |
           $myappname = "${{ inputs.appname }}" -replace '\s','_'
-          cp "rustdesk/${{ inputs.appname }}.exe" "rustdesk/${myappname}.exe" -ErrorAction SilentlyContinue
-          pushd ./res/msi
+          cp "../../rustdesk/${{ inputs.appname }}.exe" "../../rustdesk/${myappname}.exe" -ErrorAction SilentlyContinue
           python preprocess.py --app-name "$myappname" --arp -d ../../rustdesk
+
+      - name: Restore NuGet packages
+        working-directory: res/msi
+        run: |
           nuget restore msi.sln
-          msbuild msi.sln -p:Configuration=Release -p:Platform=x64 /p:TargetVersion=Windows10
+          dotnet restore Package/Package.wixproj
+
+      - name: Build MSI
+        working-directory: res/msi
+        run: |
+          $version = if ("${{ inputs.version }}" -eq "master") { "0.0.0-master" } else { "${{ inputs.version }}" }
+          MSBuild msi.sln /p:Configuration=Release /p:Platform=x64 /p:Version=$version
           cp ./Package/bin/x64/Release/en-us/Package.msi ../../SignOutput/rustdesk-latest.msi
           mv ./Package/bin/x64/Release/en-us/Package.msi ../../SignOutput/rustdesk.msi
           sha256sum ../../SignOutput/rustdesk.msi
-      
+
       - name: Report Status
         uses: fjogeleit/http-request-action@v1
         with:
