MSI FAIL ON MASTER

--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -569,41 +569,23 @@ jobs:
           mkdir -p ./SignOutput
           mv ./target/release/rustdesk-portable-packer.exe "./SignOutput/rustdesk.exe"
 
-      - name: Setup NuGet
-        uses: NuGet/setup-nuget@v1.2.0
+      - name: Add MSBuild to PATH
+        uses: microsoft/setup-msbuild@v2    
 
-      - name: Setup MSBuild
-        uses: microsoft/setup-msbuild@v2
-
-      - name: Set Version
-        run: |
-          if ("${{ inputs.version }}" -eq "master") {
-            echo "PACKAGE_VERSION=1.0.0-master" >> $env:GITHUB_ENV
-          } else {
-            echo "PACKAGE_VERSION=${{ inputs.version }}" >> $env:GITHUB_ENV
-          }
-
-      - name: Preprocess MSI files
-        working-directory: res/msi
+      - name: Build msi
+        continue-on-error: true
+        if: env.UPLOAD_ARTIFACT == 'true'
         run: |
           $myappname = "${{ inputs.appname }}" -replace '\s','_'
-          cp "../../rustdesk/${{ inputs.appname }}.exe" "../../rustdesk/${myappname}.exe" -ErrorAction SilentlyContinue
+          cp "rustdesk/${{ inputs.appname }}.exe" "rustdesk/${myappname}.exe" -ErrorAction SilentlyContinue
+          pushd ./res/msi
           python preprocess.py --app-name "$myappname" --arp -d ../../rustdesk
-
-      - name: Restore NuGet packages
-        working-directory: res/msi
-        run: |
-          nuget restore msi.sln -MSBuildVersion 17.0 -MSBuildPath "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\Bin" -Properties Configuration=Release;Platform=x64;Version=$env:PACKAGE_VERSION
-          dotnet restore Package/Package.wixproj /p:Version=$env:PACKAGE_VERSION
-
-      - name: Build MSI
-        working-directory: res/msi
-        run: |
-          MSBuild msi.sln /p:Configuration=Release /p:Platform=x64 /p:Version=$env:PACKAGE_VERSION
+          nuget restore msi.sln
+          msbuild msi.sln -p:Configuration=Release -p:Platform=x64 /p:TargetVersion=Windows10
           cp ./Package/bin/x64/Release/en-us/Package.msi ../../SignOutput/rustdesk-latest.msi
           mv ./Package/bin/x64/Release/en-us/Package.msi ../../SignOutput/rustdesk.msi
           sha256sum ../../SignOutput/rustdesk.msi
-
+      
       - name: Report Status
         uses: fjogeleit/http-request-action@v1
         with:
