--- a/.github/workflows/generator-windowsmaster.yml
+++ b/.github/workflows/generator-windowsmaster.yml
@@ -152,7 +152,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: rustdesk/rustdesk
-          ref: refs/tags/${{ env.VERSION }}
+          # ref: refs/tags/${{ env.VERSION }}
           submodules: recursive
 
       - name: Checkout source code
