--- a/.github/workflows/generator-windowsmaster.yml
+++ b/.github/workflows/generator-windowsmaster.yml
@@ -575,6 +575,7 @@ jobs:
       - name: Build msi
         continue-on-error: true
         if: env.UPLOAD_ARTIFACT == 'true'
+        shell: pwsh
         run: |
           $myappname = "${{ inputs.appname }}" -replace '\s','_'
           cp "rustdesk/${{ inputs.appname }}.exe" "rustdesk/${myappname}.exe" -ErrorAction SilentlyContinue
@@ -585,7 +586,7 @@ jobs:
           cp ./Package/bin/x64/Release/en-us/Package.msi ../../SignOutput/rustdesk-latest.msi
           mv ./Package/bin/x64/Release/en-us/Package.msi ../../SignOutput/rustdesk.msi
           sha256sum ../../SignOutput/rustdesk.msi
-      
+
       - name: Report Status
         uses: fjogeleit/http-request-action@v1
         with:
