--- a/.github/workflows/generator-macos-x86.yml
+++ b/.github/workflows/generator-macos-x86.yml
@@ -132,10 +132,18 @@ jobs:
           data: '{"uuid": "${{ inputs.uuid }}", "status": "5% complete"}'
 
       - name: Checkout source code
+        if: ${{ env.VERSION != 'master' }}
         uses: actions/checkout@v4
         with:
             repository: rustdesk/rustdesk
-            ref: ${{ env.VERSION == 'master' && 'HEAD' || format('refs/tags/{0}', env.VERSION) }}
+            ref: refs/tags/${{ env.VERSION }}
+            submodules: recursive
+
+      - name: Checkout source code
+        if: ${{ env.VERSION == 'master' }}
+        uses: actions/checkout@v4
+        with:
+            repository: rustdesk/rustdesk
             submodules: recursive
 
       - name: Restore bridge files
