--- a/.github/workflows/generator-IOS.yml
+++ b/.github/workflows/generator-IOS.yml
@@ -171,7 +171,7 @@ jobs:
         run: |
           # Backup the original files
           cp ./flutter/ios/Runner/Info.plist ./flutter/ios/Runner/Info.plist.bak
-          cp ./flutter/ios/Runner/Configs/AppInfo.xcconfig ./flutter/ios/Runner/Configs/AppInfo.xcconfig.bak
+          # cp ./flutter/ios/Runner/Configs/AppInfo.xcconfig ./flutter/ios/Runner/Configs/AppInfo.xcconfig.bak
           cp ./flutter/ios/Runner.xcodeproj/project.pbxproj ./flutter/ios/Runner.xcodeproj/project.pbxproj.bak
 
           # Define the bundle identifier consistently
@@ -188,8 +188,8 @@ jobs:
           sed -i '' -e "s|<key>CFBundleIdentifier</key>.*<string>.*</string>|<key>CFBundleIdentifier</key>\n\t<string>$BUNDLE_ID</string>|" ./flutter/ios/Runner/Info.plist
           
           # Update AppInfo.xcconfig
-          sed -i '' -e 's|PRODUCT_NAME = .*|PRODUCT_NAME = ${{ inputs.appname }}|' ./flutter/ios/Runner/Configs/AppInfo.xcconfig
-          sed -i '' -e "s|PRODUCT_BUNDLE_IDENTIFIER = .*|PRODUCT_BUNDLE_IDENTIFIER = $BUNDLE_ID|" ./flutter/ios/Runner/Configs/AppInfo.xcconfig
+          # sed -i '' -e 's|PRODUCT_NAME = .*|PRODUCT_NAME = ${{ inputs.appname }}|' ./flutter/ios/Runner/Configs/AppInfo.xcconfig
+          # sed -i '' -e "s|PRODUCT_BUNDLE_IDENTIFIER = .*|PRODUCT_BUNDLE_IDENTIFIER = $BUNDLE_ID|" ./flutter/ios/Runner/Configs/AppInfo.xcconfig
           
           # Update other Info.plist entries
           sed -i '' 's/<string>rustdesk<\/string>/<string>${{ inputs.appname }}<\/string>/' ./flutter/ios/Runner/Info.plist
